# parallel_calculations

./: README.adoc  README.md
bencher/: Cargo.toml
bencher/src/: bench_result.rs  common.rs  lib.rs  macros.rs  rayon.rs
bencher/src/bench_result/: common.rs  mod.rs  multi_threaded.rs  single_threaded.rs  stats.rs
cannon/: Cargo.toml
cannon/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
gauss/: Cargo.toml
gauss/src/: lib.rs  main.rs
parallel_hello_world/: Cargo.toml
parallel_hello_world/src/: main.rs
scalar/: Cargo.toml
scalar/src/: lib.rs  main.rs
scalars_of_vectors/: Cargo.toml
scalars_of_vectors/benches/: scalars_of_vectors.rs
scalars_of_vectors/src/: lib.rs  main.rs
