[package]
name = "scalars_of_vectors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "scalars_of_vectors"
harness = false